# fileSystemIndexer

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.txt  README.md  compile.sh  open.sh
.private/: project.json
cmake/: cmake_package_config.cmake.in
inc/fsi/: FSIpredefines.h
inc/fsi/core/: FSI_dirUtils.h  FSI_timeUtils.hpp
inc/fsi/core/interfaces/: FSI_dirUtils_posix.h  FSI_dirUtils_windows.h
inc/fsi/lib/: FSI_Indexer.hpp
inc/fsi/modules/temperature/: FSI_temperature.hpp  FSI_temperatureConverter.h
src/: main.cpp
src/core/: FSI_dirUtils.c  FSI_timeUtils.cpp
src/core/interfaces/: FSI_dirUtils_posix.c
src/lib/: FSI_Indexer.cpp
src/modules/temperature/: FSI_temperature.cpp  FSI_temperatureConverter.c
tests/: compile.sh  installedTest.cpp
